1. fixed rank page padding bug 2. removed ugly alert note and standardized tooltip so people know their name and selections will be visible on results page.

--- a/public/css/rozinah.css
+++ b/public/css/rozinah.css
@@ -6,8 +6,8 @@
 
 @import url("http://fonts.googleapis.com/css?family=Abel|Nunito");
 
-#sortable { list-style-type: none; margin: auto; width: 60%; float: center; }
-#sortable li { margin: 1%; padding: 0.4em; font-size: 1.4em; text-align: center }
+#sortable { padding-left: 0px; list-style-type: none; margin: auto; width: 60%; float: center; }
+#sortable li {margin:1%; padding: 0.4em; font-size: 1.4em; text-align: center }
 
 .navbar-default {
     background-color: #ED0C27;
